--- a/APM-Start/.gitignore
+++ b/APM-Start/.gitignore
@@ -1,6 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-# compiled output test
+# compiled output test2
 /dist
 /tmp
 /out-tsc
